--- a/index.html
+++ b/index.html
@@ -244,28 +244,22 @@
         
       </section>
       <div class="sociales">
-        <a href="#" target="_blank"
+        <a href="https://twitter.com/Alvar0Neid" target="_blank"
           ><img
             src="img/x logo.png"
             alt="Twitter"
             loading="lazy"
             class="socicon"
         /></a>
-        <a href="#" target="_blank"
-          ><img
-            src="img/instagram-logo.png"
-            alt="Instagram"
-            loading="lazy"
-            class="socicon"
-        /></a>
-        <a href="#" target="_blank"
+        
+        <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile" target="_blank"
           ><img
             src="img/linkedin-logo.png"
             alt="Linkedin"
             loading="lazy"
             class="socicon"
         /></a>
-        <a href="#" target="_blank"
+        <a href="https://github.com/neid1?tab=repositories" target="_blank"
           ><img 
             src="img/logo2GH.png" 
             alt="Github" 
